[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellmap-utils"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8.10"
license = "MIT"
keywords = []
authors = [
  { name = "Yurii Zubov", email = "zubov452@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fibsem_tools>=7.0.5",
  "fsspec>=2025.3.2",
  "numpy>=1.24.4",
  "pyairtable>=3.1.1",
  "pydantic>=2.11.3",
  "universal-pathlib>=0.2.5",
]

[project.urls]
Documentation = "https://github.com/U.N. Owen/cellmap-utils#readme"
Issues = "https://github.com/U.N. Owen/cellmap-utils/issues"
Source = "https://github.com/U.N. Owen/cellmap-utils"

[tool.hatch.version]
path = "src/cellmap_utils/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cellmap_utils tests}"

[tool.coverage.run]
source_pkgs = ["cellmap_utils", "tests"]
branch = true
parallel = true
omit = [
  "src/cellmap_utils/__about__.py",
]

[tool.coverage.paths]
cellmap_utils = ["src/cellmap_utils", "*/cellmap-utils/src/cellmap_utils"]
tests = ["tests", "*/cellmap-utils/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
